--- a/src/main/resources/static/view/login.html
+++ b/src/main/resources/static/view/login.html
@@ -19,7 +19,7 @@
         <label for="password">Contraseña:</label>
         <input type="password" id="password" name="password" class="form-control">
     </div>
-    <button type="submit" class="btn btn-primary">Iniciar sesión</button>
+    <button type="submit" class="btn btn-primary" onclick="login">Iniciar sesión</button>
 </form>
 
 <script src="login.js"></script>
