--- a/src/main/resources/static/view/odontologoList.html
+++ b/src/main/resources/static/view/odontologoList.html
@@ -1,10 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <title>Odontólogos</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script type="module" src="js/logout.js"></script>
 
+    <!-- Librerías propias de la Clínica Odontológica-->
+    <script type="text/javascript" src="./js/odontologo/odontologos_crud.js"></script>
+
+    <script type="module">
+        import { checkAuthentication } from './js/security.js';
+        checkAuthentication();
+    </script>
+</head>
+<body class="bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="index.html">Clínica Odontológica</a>
+    <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="pacienteList.html">Listado de Pacientes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="odontologoList.html">Listado de Odontólogos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" onclick="logout()">Cerrar sesión</a> <!-- Botón de cierre de sesión -->
+            </li>
+        </ul>
+    </div>
+</nav>
+    <div class="container mt-5">
+        <h1 class="text-center">Listado de Odontólogos</h1>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header bg-info text-white">
+                        Odontólogos
+                    </div>
+                    <div class="card-body">
+                        <table id="odontologoTable" class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th>Id</th>
+                                <th>Nombre</th>
+                                <th>Matrícula</th>
+                            </tr>
+                            </thead>
+                            <tbody id="odontologoTableBody">
+
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
