--- a/src/main/resources/static/view/pacienteList.html
+++ b/src/main/resources/static/view/pacienteList.html
@@ -1,76 +1,68 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Pacientes</title>
+    <title>Listado de Pacientes</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/js/get_pacientes.js"></script>
-    <script type="text/javascript" src="/js/update_pacientes.js"></script>
-    <script type="text/javascript" src="/js/delete_pacientes.js"></script>
+    <script type="text/javascript" src="js/paciente/pacientes_crud.js"></script>
+    <script type="module" src="js/logout.js"></script>
+
+    <script type="module">
+        import { checkAuthentication } from './js/login.js';
+        checkAuthentication();
+    </script>
 </head>
-<body>
-<div class="container">
-    <ul class="nav nav-pills">
-        <li class="nav-item">
-            <a class="nav-link" href="/">Agregar</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/pacienteList.html/">Todos</a>
-        </li>
-    </ul>
-
-    <div id="div_pacientes_table">
-        <h1>Pacientes</h1>
-        <div class="row col-md-6 table-responsive">
-            <table id="pacientesTable" class="table table-striped">
-                <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Nombre</th>
-                    <th>Apellido</th>
-                    <th></th>
-                </tr>
-                </thead>
-                <tbody id="pacientesTableBody">
-
-                </tbody>
-            </table>
-        </div>
+<body class="bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="index.html">Clínica Odontológica</a>
+    <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="pacienteList.html">Listado de Pacientes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="odontologoList.html">Listado de Odontólogos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" onclick="logout()">Cerrar sesión</a> <!-- Botón de cierre de sesión -->
+            </li>
+        </ul>
     </div>
-    <div class="row">
-        <div class="col-sm-6" style="display: none;
-											background-color:#e6fffa; padding:10px; border-radius:3px"
-             id="div_pacientes_updating">
-            <form id="update_pacientes_form">
-                <div class="form-group">
-                    <label >Id:</label>
-                    <input type="text" class="form-control" id="paciente_id" readonly>
-                </div>
-                <div class="form-group">
-                    <label >Nombre:</label>
-                    <input type="text" class="form-control" placeholder="nombre" id="nombre">
-                </div>
-                <div class="form-group">
-                    <label >Apellido:</label>
-                    <input type="text" class="form-control" placeholder="apellido" id="apellido">
-                </div>
-                <div class="form-group">
-                    <label >DNI:</label>
-                    <input type="text" class="form-control" placeholder="dni" id="dni">
-                </div>
+</nav>
+    <div class="container mt-5">
+        <h1 class="text-center">Listado de Pacientes</h1>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header bg-success text-white">
+                        Pacientes
+                    </div>
+                    <div class="card-body">
+                        <table id="pacienteTable" class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th>Id</th>
+                                <th>Nombre</th>
+                                <th>Apellido</th>
+                                <th>DNI</th>
+                                <th>Fecha de ingreso</th>
+                            </tr>
+                            </thead>
+                            <tbody id="pacienteTableBody">
 
-
-                <button type="submit" class="btn btn-primary">Modificar</button>
-            </form>
-            <div id="response" style="display:none; margin:10px">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <hr>
-</div>
 </body>
 </html>
